--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.6",
     "react-dom": "^18.3.1",
+    "react-graph-vis": "^1.0.7",
     "react-scripts": "5.0.1",
-    "reagraph": "^4.21.0",
+    "react-vis-network-graph": "^3.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -40,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
